Got everything in jsons to display correctly onlick, still need spacing, the repo navbar, and the footer

--- a/compile.css
+++ b/compile.css
@@ -1,7 +1,20 @@
+.headWrap {
+  background-color: lightgray; }
+
+.first-nav, .second-nav {
+  display: inline-block; }
+
+.first-ul {
+  list-style: none; }
+  .first-ul li {
+    display: inline-block;
+    padding-right: 10px; }
+
 .second-ul {
   list-style: none; }
   .second-ul li {
-    display: inline-block; }
+    display: inline-block;
+    padding-right: 10px; }
   .second-ul img {
     width: 20px;
     border-radius: 6px; }
@@ -20,6 +33,27 @@
 .pageWrap {
   width: 60%;
   margin: 0 auto; }
-  .pageWrap .profWrap img {
-    width: 230px;
-    border-radius: 6px; }
+  .pageWrap .profWrap {
+    margin-right: 30px;
+    width: 30%;
+    display: inline-block; }
+    .pageWrap .profWrap img {
+      width: 230px;
+      border-radius: 6px; }
+  .pageWrap .contentWrap {
+    width: 65%;
+    display: inline-block;
+    vertical-align: top; }
+    .pageWrap .contentWrap .content-ul {
+      list-style: none; }
+      .pageWrap .contentWrap .content-ul li {
+        vertical-align: top;
+        display: inline-block;
+        margin: 10px;
+        cursor: pointer; }
+      .pageWrap .contentWrap .content-ul .repoList {
+        width: 100%; }
+
+.pushimg {
+  width: 20px;
+  border-radius: 6px; }
